--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -370,14 +370,14 @@
                 <div class="button-area-line">
                   <a
                     id="demo2"
-                    onclick="showLinkModal('intent:{{src}}#Intent;package=com.mxtech.videoplayer.ad;S.title={{filename}};end')"
+                    href="intent:{{src}}#Intent;package=com.mxtech.videoplayer.ad;S.title={{filename}};end"
                     class="block"
                   >
                     <i class="fa fa-play"></i> Stream MX
                   </a>
                   <a
                     id="demo1"
-                    onclick="showLinkModal('vlc://{{src}}')"
+                    href="vlc://{{src}}"
                     class="block"
                   >
                     <i class="fa fa-play"></i> Stream VLC
