--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -459,6 +459,12 @@
                   for batter experiance.
                 </p>
               </div>
+            </div>
+
+            <h7>Join us on Telegram to get more amazing movies like this:</h7>
+            <center><a href="https://telegram.me/iPapcornPrime" class="tg-btn" style="font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; text-decoration: none; color: #FFFFFF; background-color: black; padding: 10px 20px; border-radius: 5px; border: none;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/512px-Telegram_2019_Logo.svg.png" alt="Telegram Logo" width="20" height="20" style="margin-right: 5px;">
+            Join i Papcorn Prime on Telegram
 
               <!-- SHORT URL Download -->
             </div>
