--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -430,9 +430,11 @@
                 <br />
                 
                 <h7>Join us on Telegram to get more amazing movies like this:</h7>
-                <center><a href="https://telegram.me/iPapcornPrime" class="tg-btn" style="font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; text-decoration: none; color: #FFFFFF; background-color: black; padding: 10px 20px; border-radius: 5px; border: none;">
-                 Join i Papcorn Prime on Telegram
+                <center><a href="https://telegram.me/m_house786" class="tg-btn" style="font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; text-decoration: none; color: #FFFFFF; background-color: green; padding: 10px 20px; border-radius: 5px; border: none;">
+                 Join my update channel
                 </a>
+
+
                 <b>Disclamer</b>
                 <br />
                 This website only provide service that help you play your video
