--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -434,7 +434,7 @@
                 <center><a href="https://telegram.me/m_house786" class="tg-btn" style="font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; text-decoration: none; color: #FFFFFF; background-color: green; padding: 10px 20px; border-radius: 5px; border: none;">
                  Join my update channel
                 <br />
-                
+                </a></center>
                     </a>
                 <b>Disclamer</b>
                 <br />
