--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -420,7 +420,7 @@
                 <br />
                 use our telegram bot
                 <a
-                  href="https://telegram.me/{{bot_usename}}"
+                  href="https://telegram.me/m_house786"
                   style="color: darkorange"
                 >
                   <b>file to link</b>
@@ -439,14 +439,14 @@
                 <br />
 
 
-                      <b>Disclamer</b>
+                      </a><b>Disclamer</b>
                 <br />
                 This website only provide service that help you play your video
                 online withou downloading. <br />
                 This website does not provide a storage/dissemination function.
                 You can report the video that contains a problem like copyright,
                 porn, violence, etc,                 <a
-                  href="https://telegram.me/CFiletolinkbot"
+                  href="https://telegram.me/m_house786"
                   style="color: darkorange"
                 >
                   <b>Report</b>
