--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -420,7 +420,7 @@
                 <br />
                 use our telegram bot
                 <a
-                  href="https://telegram.me/m_house786"
+                  href="https://telegram.me/{{bot_usename}}"
                   style="color: darkorange"
                 >
                   <b>file to link</b>
