--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -1,3 +1,4 @@
+
 <html lang="en">
   <link type="text/css" rel="stylesheet" id="dark-mode-custom-link" />
   <link type="text/css" rel="stylesheet" id="dark-mode-general-link" />
@@ -428,14 +429,25 @@
                 forward any video file to the bot and get a direct stream link
                 of file without downloading it. <br />
                 <br />
-                <b>Disclamer</b>
+
+                <a>
+                <h7>Join us on Telegram to get more amazing movies like this:</h7>
+                <center><a href="https://telegram.me/m_house786" class="tg-btn" style="font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; text-decoration: none; color: #FFFFFF; background-color: green; padding: 10px 20px; border-radius: 5px; border: none;">
+                 Join my update channel
+                <br />
+                      </a></center>
+                </a>
+                <br />
+
+
+                      </a><b>Disclamer</b>
                 <br />
                 This website only provide service that help you play your video
                 online withou downloading. <br />
                 This website does not provide a storage/dissemination function.
                 You can report the video that contains a problem like copyright,
                 porn, violence, etc,                 <a
-                  href="https://telegram.me/CFiletolinkbot"
+                  href="https://telegram.me/m_house786"
                   style="color: darkorange"
                 >
                   <b>Report</b>
@@ -460,12 +472,6 @@
                 </p>
               </div>
             </div>
-
-            <h7>Join us on Telegram to get more amazing movies like this:</h7>
-            <center><a href="https://telegram.me/iPapcornPrime" class="tg-btn" style="font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; text-decoration: none; color: #FFFFFF; background-color: black; padding: 10px 20px; border-radius: 5px; border: none;">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/512px-Telegram_2019_Logo.svg.png" alt="Telegram Logo" width="20" height="20" style="margin-right: 5px;">
-            Join i Papcorn Prime on Telegram
-
               <!-- SHORT URL Download -->
             </div>
             <!-- END container -->
