--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -311,7 +311,7 @@
       <div class="site-pusher">
         <header class="header">
           <a href="#" class="header__icon" id="header__icon"></a>
-          <a href="#" class="header__logo">File to Link Bot</a>
+          <a href="#" class="header__logo">i Papcorn Prime Stream Disk</a>
           <nav class="menu">
             <a href="/">Home</a>
             <a href="#">Contact</a>
@@ -431,18 +431,17 @@
                 <br />
                 use our telegram bot
                 <a
-                  href="https://telegram.me/{{bot_usename}}"
+                  href="https://telegram.me/{{iPapcornPrimeBot}}"
                   style="color: darkorange"
                 >
-                  <b>file to link</b>
+                  <b>i Papcorn Prime Bot</b>
                 </a>
-                forward any video file to the bot and get a direct stream link
-                of file without downloading it. <br />
+                You can watch and download movies and webseries online for free. For dual Audio you can watch in your Audio by changing audio by using MX player, VLC player & Playit. <br />
                 <br />
 
                 <a>
                 <h7>Join us on Telegram to get more amazing movies like this:</h7>
-                <center><a href="https://telegram.me/m_house786" class="tg-btn" style="font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; text-decoration: none; color: #FFFFFF; background-color: green; padding: 10px 20px; border-radius: 5px; border: none;">
+                <center><a href="https://telegram.me/arsOfficial10" class="tg-btn" style="font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; text-decoration: none; color: #FFFFFF; background-color: green; padding: 10px 20px; border-radius: 5px; border: none;">
                  Join my update channel
                 <br />
                       </a></center>
@@ -457,7 +456,7 @@
                 This website does not provide a storage/dissemination function.
                 You can report the video that contains a problem like copyright,
                 porn, violence, etc,                 <a
-                  href="https://telegram.me/m_house786"
+                  href="https://telegram.me/iPapdiscussion"
                   style="color: darkorange"
                 >
                   <b>Report</b>
@@ -477,6 +476,11 @@
                   or
                   <a href="#" style="color: #f78400">
                     <b> VLC PLAYER</b>
+                    or
+
+                  <a href="#" style="color: #7e0dff">
+
+                    <b> Playit PLAYER</b>
                   </a>
                   for batter experiance.
                 </p>
@@ -522,4 +526,4 @@
       <div> {{ ad6 | safe }} </div>
     </div>
   </body>
-</html>
+  </html>
