--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -318,7 +318,8 @@
     </script>
     <!--🥰  Thank you for giving me credit @LazyDeveloperr  🥰 -->
     <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
-	<script>
+ <script src="https://cdn.plyr.io/3.6.12/plyr.js"></script>
+            <script>
               const controls = [
                 "rewind",
                 "audio",
