--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -124,7 +124,7 @@
                 <div class="container-fluid">
                     <a class="navbar-brand  text-light fw-bold " href="https://telegram.me/real_MoviesAdda2">
                         <span class="bg-clip-text sm:text-[25px] text-[22px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
-                            Lazy PLayer
+                            ARS private player
                           </span>
                     </a>
                   </div>
@@ -318,31 +318,29 @@
     </script>
     <!--🥰  Thank you for giving me credit @LazyDeveloperr  🥰 -->
  <script src="https://cdn.plyr.io/3.6.12/plyr.js"></script>
-            <script>
-              const controls = [
-                "rewind",
-                "audio",
-                "play",
-                "fast-forward",
-                "progress",
-                "current-time",
-                "duration",
-                "captions",
-                "settings",
-                "pip",
-                "airplay",
-                "fullscreen",
-              ];
-              document.addEventListener("DOMContentLoaded", () => {
-                const player = Plyr.setup("#myVideo", {
-                  controls,
-                  adTagUrl:"https://www.videosprofitnetwork.com/watch.xml?key=29654bca221e8261067ac49af92b392b",
-                  skipButton:{enabled: true, text: 'Skip ad', delay: 10}
-                });
-              });
-            </script>
-           
-            <!--Video Player End-->
+	<script>
+        const controls = [
+            'play-large',
+            'rewind','play', 
+            'fast-forward', 
+            'progress', 
+            'current-time',
+            'duration',
+            'mute',
+            'volume',
+            'captions',
+            'settings',
+            'pip',
+            'airplay',
+            'download',
+            'fullscreen'
+        ];
+        document.addEventListener('DOMContentLoaded', () => {
+            const player = Plyr.setup('.player', { controls });
+        });
+
+    </script>
+    <!-- iterate animation -->
 
 
     <!-- disabling right click -->
