--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -79,7 +79,8 @@
                         <a href="https://telegram.me/Rutuja78" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Rutuja</a>
                         <a href="https://telegram.me/AkshayChand08" type="button" class="btn btn-outline-secondary w-100 mt-1">Akshay Chand</a>
                         <a href="https://telegram.me/sk7252k" type="button" class="btn btn-outline-secondary w-100 mt-1">SK</a>
-	            <div class="wow animate__animated animate__fadeInLeft ">
+	        <div class="offcanvas-body">    
+		     <div class="wow animate__animated animate__fadeInLeft ">
                         <h2 class="font-semibold" style="text-shadow: 1px 2px 8px black;">Movies Group</h2>
 		    </div>
                         <a href="https://telegram.me/iPapcornPrimeGroup" type="button" class="btn btn-outline-secondary w-100 mt-1">Group 1</a>
@@ -128,7 +129,7 @@
             <div id="file-name" class="tex-center text-lg max:w-74  p-2 flex-wrap text-center justify-center items-center">
                 <p class="fw-bold"> 
                     <span id="myDiv" class="h6 flex-wrap text-center justify-center items-center card-title wow animate__animated animate__fadeInRight" >
-                        %s
+                        <h4>{{ filename }} - {{file_size}}</h4>
                     </span>
                 </p>
             </div>
