--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -129,7 +129,6 @@
             <div id="file-name" class="tex-center text-lg max:w-74  p-2 flex-wrap text-center justify-center items-center">
                 <p class="fw-bold"> 
                     <span id="myDiv" class="h6 flex-wrap text-center justify-center items-center card-title wow animate__animated animate__fadeInRight" >
-                        <h7>{{ filename }}</h4>
                     </span>
                 </p>
             </div>
@@ -197,7 +196,7 @@
             <div class="justify-content-center align-items-center w-100 d-flex mb-3">
                 <div class="row d-flex w-100 justify-content-center align-items-center">
                     <div class="col-lg-5 col-10  py-2 text-center bg-success rounded-4 text-sm wow animate__animated animate__FadeIn">
-                        Message us if you have any problems <a href="https://telegram.me/iPapdiscussion" class="text-[16px] font-bold underline active:text-blue-600">LazyDeveloperr</a>
+                        Message us if you have any problems <a href="https://telegram.me/iPapdiscussion" class="text-[16px] font-bold underline Active:text-blue-600">Support Group</a>
                     </div>
                 </div>
             </div>
