--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -111,8 +111,8 @@
 
                 <!-- web title -->
                 <div class="container-fluid">
-                    <a class="navbar-brand  text-light fw-bold " href="https://telegram.me/real_MoviesAdda2">
-                        <span class="bg-clip-text sm:text-[25px] text-[22px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
+                    <a class="navbar-brand  text-light fw-bold " href="https://telegram.me/iPapcornPrimeGroup">
+                        <span class="bg-clip-text sm:text-[15px] text-[17px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
                             ARS private player
                           </span>
                     </a>
