--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -112,7 +112,7 @@
                 <!-- web title -->
                 <div class="container-fluid">
                     <a class="navbar-brand  text-light fw-bold " href="https://telegram.me/iPapcornPrimeGroup">
-                        <span class="bg-clip-text sm:text-[15px] text-[17px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
+                        <span class="bg-clip-text sm:text-[2px] text-[2px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
                             ARS private player
                           </span>
                     </a>
@@ -129,7 +129,7 @@
             <div id="file-name" class="tex-center text-lg max:w-74  p-2 flex-wrap text-center justify-center items-center">
                 <p class="fw-bold"> 
                     <span id="myDiv" class="h6 flex-wrap text-center justify-center items-center card-title wow animate__animated animate__fadeInRight" >
-	                %s    
+	                 <h4>{{ filename }} - {{file_size}}</h4>   
                     </span>
                 </p>
             </div>
@@ -137,7 +137,7 @@
         <!-- Online Video Player -> to be displayed here  -->
         <div class="justify-content-center align-items-center w-100 d-flex  flex-wrap">
             <div class="lg:w-9/12 lg:px-12 lg:py-4 w-full  border border-danger wow animate__animated animate__fadeInLeft">
-                <video id="player" class="player " playsinline controls>
+                <video id="myVideo" class="player " playsinline controls>
                     <source src="%s" type="video/mp4">
                 </video>
             </div>
@@ -307,11 +307,10 @@
             'settings',
             'pip',
             'airplay',
-            'download',
             'fullscreen'
         ];
         document.addEventListener('DOMContentLoaded', () => {
-            const player = Plyr.setup('.player', { controls });
+            const player = Plyr.setup("#myVideo", { controls });
         });
 
     </script>
