--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -89,7 +89,8 @@
                     </div>
                   
                     <!-- footer of sidebar -->
-                    
+			    <!-- section -->
+          
                     <div class="text-center w-100">
                         <div class="mt-3">
                             <h5 class="flex justify-center items-center gap-2">
@@ -103,22 +104,14 @@
                             <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-c-circle " viewBox="0 0 16 16"><path d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8Zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0ZM8.146 4.992c-1.212 0-1.927.92-1.927 2.502v1.06c0 1.571.703 2.462 1.927 2.462.979 0 1.641-.586 1.729-1.418h1.295v.093c-.1 1.448-1.354 2.467-3.03 2.467-2.091 0-3.269-1.336-3.269-3.603V7.482c0-2.261 1.201-3.638 3.27-3.638 1.681 0 2.935 1.054 3.029 2.572v.088H9.875c-.088-.879-.768-1.512-1.729-1.512Z"/></svg></span>
                             <span class="font-bold bg-clip-text text-[18px] text-transparent bg-gradient-to-r from-yellow-400  via-orange-700 to-red-700" style="text-shadow: 3px 5px 11px black;">Team ARS</span>
                         </div>
-                    </div>
-
+			    </div>
+                  
+                    <!-- footer of sidebar -->
                     <!-- <p>Try scrolling the rest of the page to see this option in action.</p> -->
                 </div>
                 </div>
 
                 <!-- web title -->
-                <div class="container-fluid">
-                    <a class="navbar-brand  text-light fw-bold " href="https://telegram.me/iPapcornPrimeGroup">
-                        <span class="bg-clip-text sm:text-[2px] text-[2px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
-                            ARS private player
-                          </span>
-                    </a>
-                  </div>
-               </div>
-            </nav>
             <!-- ./Navbar -->
     </header>
     <!-- ./Header -->
@@ -129,7 +122,7 @@
             <div id="file-name" class="tex-center text-lg max:w-74  p-2 flex-wrap text-center justify-center items-center">
                 <p class="fw-bold"> 
                     <span id="myDiv" class="h6 flex-wrap text-center justify-center items-center card-title wow animate__animated animate__fadeInRight" >
-	                 <h4>{{ filename }} - {{file_size}}</h4>   
+                        %s
                     </span>
                 </p>
             </div>
@@ -137,7 +130,7 @@
         <!-- Online Video Player -> to be displayed here  -->
         <div class="justify-content-center align-items-center w-100 d-flex  flex-wrap">
             <div class="lg:w-9/12 lg:px-12 lg:py-4 w-full  border border-danger wow animate__animated animate__fadeInLeft">
-                <video id="myVideo" class="player " playsinline controls>
+                <video id="player" class="player " playsinline controls>
                     <source src="%s" type="video/mp4">
                 </video>
             </div>
@@ -197,7 +190,7 @@
             <div class="justify-content-center align-items-center w-100 d-flex mb-3">
                 <div class="row d-flex w-100 justify-content-center align-items-center">
                     <div class="col-lg-5 col-10  py-2 text-center bg-success rounded-4 text-sm wow animate__animated animate__FadeIn">
-                        Message us if you have any problems <a href="https://telegram.me/iPapdiscussion" class="text-[16px] font-bold underline Active:text-blue-600">Support Group</a>
+                        If you find any broken links then please contact <a href="https://telegram.me/iPapdiscussion" class="text-[16px] font-bold underline active:text-blue-600">Support Group</a>
                     </div>
                 </div>
             </div>
@@ -209,7 +202,7 @@
                 <!-- Section: Social media -->
                 <section class="lg:p-4 p-2 justify-content-center align-items-center text-center ">  
                     <!-- YouTube -->
-                    <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInLeft hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200" href="https://www.youtube.com/@AkshayChand10" target="_blank" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInLeft hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200" href="https://youtube.com/@AkshayChand10" target="_blank" role="button">
                          <svg class="wow animate__animated animate__heartBeat animate__delay-1s animate__infinite" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 64 64">
                             <linearGradient id="PMWUiMSnUf2R_PPJ6rqZea_44112_gr1" x1="32" x2="32" y1="10" y2="54.751" gradientUnits="userSpaceOnUse" spreadMethod="reflect"><stop offset="0" stop-color="#1a6dff"></stop><stop offset="1" stop-color="#c822ff"></stop></linearGradient><path fill="url(#PMWUiMSnUf2R_PPJ6rqZea_44112_gr1)" d="M32,53.001c-6.358,0-12.716-0.195-19.299-0.584c-4.96-0.293-8.961-4.242-9.308-9.187 c-0.521-7.452-0.521-15.009-0.001-22.46c0.348-4.945,4.349-8.895,9.309-9.188c13.167-0.778,25.433-0.778,38.598,0 c4.96,0.293,8.961,4.242,9.308,9.187c0.521,7.452,0.521,15.009,0.001,22.46c-0.348,4.945-4.349,8.895-9.309,9.188l0,0 C44.716,52.806,38.358,53.001,32,53.001z M51.182,50.421l0.059,0.998L51.182,50.421c3.959-0.234,7.153-3.386,7.431-7.331 c0.515-7.358,0.515-14.821-0.001-22.181c-0.276-3.944-3.471-7.096-7.43-7.33c-13.088-0.773-25.275-0.773-38.363,0 c-3.959,0.234-7.153,3.386-7.431,7.331c-0.515,7.358-0.515,14.821,0.001,22.181c0.276,3.944,3.471,7.096,7.43,7.33 C25.906,51.194,38.094,51.194,51.182,50.421z"></path><linearGradient id="PMWUiMSnUf2R_PPJ6rqZeb_44112_gr2" x1="31.72" x2="31.72" y1="24.25" y2="39.252" gradientUnits="userSpaceOnUse" spreadMethod="reflect"><stop offset="0" stop-color="#6dc7ff"></stop><stop offset="1" stop-color="#e6abff"></stop></linearGradient><path fill="url(#PMWUiMSnUf2R_PPJ6rqZeb_44112_gr2)" d="M25 39.84L25 24.16 38.44 32z"></path><linearGradient id="PMWUiMSnUf2R_PPJ6rqZec_44112_gr3" x1="32.212" x2="32.212" y1="10" y2="54.751" gradientUnits="userSpaceOnUse" spreadMethod="reflect"><stop offset="0" stop-color="#1a6dff"></stop><stop offset="1" stop-color="#c822ff"></stop></linearGradient><path fill="url(#PMWUiMSnUf2R_PPJ6rqZec_44112_gr3)" d="M24,41.581V22.419L40.425,32L24,41.581z M26,25.901v12.197L36.456,32L26,25.901z"></path>
                         </svg>
@@ -223,46 +216,22 @@
                     </a>
               
                     <!-- Instagram -->
-                    <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInUp animate__delay-2s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300" href="https://instagram.com/akshaychand10" target="_blank" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInUp animate__delay-2s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300" href="https://instagram.com/akshaychand10?igshid=ZGUzMzM3NWJiOQ==" target="_blank" role="button">
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 50 50">
                         <path fill="url(#PMWUiMSnUf2R_PPJ6rqZea_44112_gr1)" d="M 16 3 C 8.8324839 3 3 8.8324839 3 16 L 3 34 C 3 41.167516 8.8324839 47 16 47 L 34 47 C 41.167516 47 47 41.167516 47 34 L 47 16 C 47 8.8324839 41.167516 3 34 3 L 16 3 z M 16 5 L 34 5 C 40.086484 5 45 9.9135161 45 16 L 45 34 C 45 40.086484 40.086484 45 34 45 L 16 45 C 9.9135161 45 5 40.086484 5 34 L 5 16 C 5 9.9135161 9.9135161 5 16 5 z M 37 11 A 2 2 0 0 0 35 13 A 2 2 0 0 0 37 15 A 2 2 0 0 0 39 13 A 2 2 0 0 0 37 11 z M 25 14 C 18.936712 14 14 18.936712 14 25 C 14 31.063288 18.936712 36 25 36 C 31.063288 36 36 31.063288 36 25 C 36 18.936712 31.063288 14 25 14 z M 25 16 C 29.982407 16 34 20.017593 34 25 C 34 29.982407 29.982407 34 25 34 C 20.017593 34 16 29.982407 16 25 C 16 20.017593 20.017593 16 25 16 z"></path>
                         </svg>
-                    </a>
-                  </section>
-
-                  <!-- For LazyDeveloper // credit --- Please don't remove footer credit -->
-                  <div class="row flex-row-reverse text-secondary justify-content-center align-items-center">
-                      <div class="col-lg-6 col-12 justify-content-center align-items-center text-center p-1 wow animate__animated animate__fadeInRight">
-                        <ul class="navbar-nav">
-                            <li class="navbar-item bg-gradient-to-r from-pink-500 rounded-xl p-2"> <h5 class="text-gray-100 font-semibold text-sm"> Enjoy aur Movie... </h5><sup class="badge badge-error text-xs text-gray-300 font-monospace">ARS official-</sup> </li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6 col-12 justify-content-center align-items-center text-center p-1 wow animate__animated animate__fadeInLeft">
-                        <ul class="navbar-nav">
-                            <li class="navbar-item bg-gradient-to-l from-pink-500 rounded-xl p-2 "> <h5 class="text-gray-100 font-semibold text-sm" > Success is the journey of millions of failure and lots of hard work </h5> <sup class="badge  text-xs text-gray-300 font-monospace">-Team ARS-</sup> </li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-4 justify-content-center align-items-center text-center mt-lg-0 mt-5  pt-lg-0 pt-4 wow animate__animated animate__fadeInUp">
-                        <ul class="navbar-nav ">
-                            <li class="nav-item justify-center items-center flex"  style="margin-top: -40px;">
-                                <img src="https://i.ibb.co/BwdmYXs/ARS-Share-frnd.png" height="140px" class="rounded-3 " alt="logo">
-                            </li>
-                            <!-- <li class="nav-item justify-center items-center text-center">
-                                <a  class="nav-link h1 text-center sm:-m-1 -ms-4"><h5><a class="font-bold" href="https://telegram.me/real_MoviesAdda2" target="_blank">MoviesAdda : </a>Run and managed by <a href="https://telegram.me/Aadil_h" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Adil</a> & <a href="https://telegram.me/LazyDeveloperr" target="_blank">Indu(<a href="https://telegram.me/LazyDeveloperr" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">LazyDeveloper</a>)</a> </h5></a>
-                            </li> -->
-                        </ul>
-                    </div>
-                    
-                    <!-- Copyright -->
+		    </a>
+                <!-- For LazyDeveloper // credit --- Please don't remove footer credit -->
+                 
                 </div> 
-<!--                 <div class=" justify-center items-center text-center w-full text-center flex ">
+                 <div class=" justify-center items-center text-center w-full text-center flex ">
                     <div  class="text-gray-400 text-center sm:-m-1 -ms-4 m-2 p-2">
                         <h5>
-                            <a class="font-bold" href="https://telegram.me/real_MoviesAdda2" target="_blank">MoviesAdda : </a>Run and managed by <a href="https://telegram.me/Aadil_h" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Adil</a> & <a href="https://telegram.me/LazyDeveloperr" target="_blank">Indu(<a href="https://telegram.me/LazyDeveloperr" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">LazyDeveloper</a>)
+                            <a class="font-bold" href="https://telegram.me/iPapcornPrimeBot" target="_blank">i Papcorn Prime Bot : </a>Run and managed by <a href="https://telegram.me/arsOfficial10" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">ARS official</a>)
                             </a> 
                         </h5>
                     </div>
-                </div> -->
+                </div> 
             </div>
             <hr>
             <div class="text-center text-xs p-3 dark:text-light text-light gap-2" style="background-color: rgba(0, 0, 0, 0.2);">
@@ -292,7 +261,7 @@
 
     </script>
     <!--🥰  Thank you for giving me credit @LazyDeveloperr  🥰 -->
- <script src="https://cdn.plyr.io/3.6.12/plyr.js"></script>
+    <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
 	<script>
         const controls = [
             'play-large',
@@ -310,7 +279,7 @@
             'fullscreen'
         ];
         document.addEventListener('DOMContentLoaded', () => {
-            const player = Plyr.setup("#myVideo", { controls });
+            const player = Plyr.setup('.player', { controls });
         });
 
     </script>
@@ -387,5 +356,4 @@
 
     <!--🥰  Thank you for giving me credit @LazyDeveloperr  🥰 -->
 </body>
-                                                                                                                          
-</html>
+	    </html>
