--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -152,18 +152,15 @@
 
             <!--Video Player Start-->
 
-            <div class="container">
-              <video
-                id="myVideo"
-                controls=""
-                src="{{ src }}"
-                width="100%"
-                height="auto"
-              >
-                Your browser does not support the video tag.
-              </video>
+            <!-- Online Video Player -> to be displayed here  -->
+        <div class="justify-content-center align-items-center w-100 d-flex  flex-wrap">
+            <div class="lg:w-9/12 lg:px-12 lg:py-4 w-full  border border-danger wow animate__animated animate__fadeInLeft">
+                <video id="player" class="player " playsinline controls>
+                    <source src="%s" type="video/mp4">
+                </video>
             </div>
-            <script src="https://cdn.plyr.io/3.6.12/plyr.js"></script>
+	</div>
+	<script src="https://cdn.plyr.io/3.6.12/plyr.js"></script>
             <script>
               const controls = [
                 "rewind",
