--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -130,7 +130,8 @@
         <!-- Online Video Player -> to be displayed here  -->
         <div class="justify-content-center align-items-center w-100 d-flex  flex-wrap">
             <div class="lg:w-9/12 lg:px-12 lg:py-4 w-full  border border-danger wow animate__animated animate__fadeInLeft">
-                <video
+             <div class="container">  
+		<video
                 id="myVideo"
                 controls=""
                 src="{{ src }}"
