--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -145,7 +145,13 @@
         <!-- External video player section -->
             <div class="justify-content-center align-items-center w-100 d-flex">
                     <div class="row d-flex w-100 justify-content-center align-items-center">
-
+        <div class="containerbox"> 
+        <div id="info-box">
+           <p style="font-size: 16px; color:#7b89a3;">File Details :</p>
+           <p style="font-size: 13px; color:#7b89a3;">Name : {{file_name}}</p>
+           <p style="font-size: 13px; color:#7b89a3;">Size : {{file_size}}</p>
+           <p style="font-size: 13px; color:#7b89a3;">Shared by : ******* (Privacy Enabled)</p>
+	</div>
                         <div class="col-lg-7 col-12 d-flex justify-content-start align-items-center ">
                             <p class="h4 px-2 mt-4 bg-clip-text text-transparent bg-gradient-to-r from-yellow-200 to-orange-600 font-bold mb-2">Play with...</p>
                         </div>
