--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -112,6 +112,15 @@
                 </div>
 
                 <!-- web title -->
+                <div class="container-fluid">
+                    <a class="navbar-brand  text-light fw-bold " href="https://telegram.me/real_MoviesAdda2">
+                        <span class="bg-clip-text sm:text-[25px] text-[22px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
+                            Movies Adda
+                          </span>
+                    </a>
+                  </div>
+               </div>
+            </nav>
             <!-- ./Navbar -->
     </header>
     <!-- ./Header -->
@@ -122,7 +131,7 @@
             <div id="file-name" class="tex-center text-lg max:w-74  p-2 flex-wrap text-center justify-center items-center">
                 <p class="fw-bold"> 
                     <span id="myDiv" class="h6 flex-wrap text-center justify-center items-center card-title wow animate__animated animate__fadeInRight" >
-                        {{file_name}}
+                        <h4>{{ filename }} - {{file_size}}</h4>
                     </span>
                 </p>
             </div>
