--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -79,10 +79,15 @@
                         <a href="https://telegram.me/Rutuja78" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Rutuja</a>
                         <a href="https://telegram.me/AkshayChand08" type="button" class="btn btn-outline-secondary w-100 mt-1">Akshay Chand</a>
                         <a href="https://telegram.me/sk7252k" type="button" class="btn btn-outline-secondary w-100 mt-1">SK</a>
-	        <div class="offcanvas-body">    
-		     <div class="wow animate__animated animate__fadeInLeft ">
-                        <h3 class="font-semibold" style="text-shadow: 1px 2px 8px black;">Movies Group</h3>
-		    </div>
+	        <div class="text-center w-100">
+                        <div class="mt-3">
+                            <h5 class="flex justify-center items-center gap-2">
+                                <span class="text-dark font-monospace" style="text-shadow: 3px 5px 11px rgb(126, 10, 80);">With Love</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-chat-heart" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" fill="#dc0303" d="M2.965 12.695a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2Zm-.8 3.108.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125ZM8 5.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
+                                  </svg>
+                            </h5>
+			</div>
                         <a href="https://telegram.me/iPapcornPrimeGroup" type="button" class="btn btn-outline-secondary w-100 mt-1">Group 1</a>
                         <a href="https://telegram.me/MovieRockersGroup" type="button" class="btn btn-outline-secondary w-100 mt-1">Group 2</a>
                         <a href="https://telegram.me/iPapdiscussion" type="button" class="btn btn-outline-secondary w-100 mt-1">Discussion (Help Group)</a>
@@ -109,22 +114,7 @@
                     <!-- footer of sidebar -->
                     <!-- <p>Try scrolling the rest of the page to see this option in action.</p> -->
                 </div>
-                </div>
-
-                <!-- web title -->
-                <div class="container-fluid">
-                    <a class="navbar-brand  text-light fw-bold " href="https://telegram.me/real_MoviesAdda2">
-                        <span class="bg-clip-text sm:text-[25px] text-[22px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
-                            Movies Adda
-                          </span>
-                    </a>
-                  </div>
-               </div>
-            </nav>
-            <!-- ./Navbar -->
-    </header>
-    <!-- ./Header -->
-
+		</div>
     <div class="bg-black  text-light"  >
         <!-- file Name -> to be displayed here  -->
         <div class="justify-content-center align-items-center w-100 d-flex">
