--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -32,6 +32,7 @@
             </nav>
             <!-- ./Navbar -->
 </header>
+	<style>
      body {
         font-family: sans-serif;
         font-size: 16px;
