--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -257,7 +257,7 @@ YOUR ADS
         </div>
         <div style="margin-bottom: 5px; margin-top: 10px">Download Options :</div>
         </div>
-                <a id="demo3" onclick="showLinkModal('{{src}}')" class="block">
+                <a id="dl-btn" onclick="showLinkModal('{{src}}')" class="block">
                   <i class="fa fa-download"></i> Download File (open in New Tab)
                 </a>
               </div>
