--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -264,6 +264,8 @@ YOUR ADS
         </a>
     </h2>
 	    </center>
+	<button style="font-size: 20px; background-color: yellow; border-radius: 10px;" onclick="window.location.href = '{current_url}'">Save in your gallery</button> &nbsp
+    </center>
             
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.8/plyr.js"></script>
