--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -257,15 +257,17 @@ YOUR ADS
         </div>
         <div style="margin-bottom: 5px; margin-top: 10px">Download Options :</div>
         </div>
+	    <div id="button-container2">
+            <button id="dl-btn" onclick="openModal()">
+                <i class="fas fa-download"></i> Download Now
+            </button>
+	    </div>
 	    <center>
     <h2>
         <a href="https://telegram.me/BotszList">
             <img src="https://graph.org/file/b57cdba982191a25db535.jpg" alt="BotszList" width="150" height="75">
         </a>
     </h2>
-	    </center>
-	<button style="font-size: 20px; background-color: yellow; border-radius: 10px;" onclick="window.location.href = '{current_url}'">Save in your gallery</button> &nbsp
-    </center>
             
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.8/plyr.js"></script>
