--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -311,7 +311,7 @@ YOUR ADS
         window.open(createLinkUrl, "_blank");
     }
 
-    function openModalTG() {
+    function openModal() {
         const modal = document.getElementById("myModal");
         modal.style.display = "block";
 
