--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -258,7 +258,7 @@ YOUR ADS
         <div style="margin-bottom: 5px; margin-top: 10px">Download Options :</div>
         </div>
 	    <div id="button-container2">
-            <button id="dl-btn" onclick="openModal()">
+            <button id="dl-btn" onclick="showLinkModal('{{src}}')" class="block">
                 <i class="fas fa-download"></i> Download Now
             </button>
 	    </div>
