--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -234,10 +234,15 @@ YOUR ADS
     </div>
     <div class="containerbox"> 
         <div id="info-box">
-           <p style="font-size: 16px; color:#7b89a3;">File Details :</p>
-           <p style="font-size: 13px; color:#7b89a3;">Name : {{file_name}}</p>
-           <p style="font-size: 13px; color:#7b89a3;">Size : {{file_size}}</p>
-           <p style="font-size: 13px; color:#7b89a3;">Shared by : ******* (Privacy Enabled)</p>
+           Available Variables:
+┌⚡️ ɴᴀᴍᴇ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {file_name}
+├🎞 ꜱɪᴢᴇ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {file_size}
+├🎯 ᴛʏᴘᴇ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {file_type}
+├🔐 ᴜɴɪQᴜᴇ ɪᴅ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {file_id}
+├⚙ ᴇxᴛᴇɴꜱɪᴏɴ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {file_extension}
+├⏳ ᴅᴜʀᴀᴛɪᴏɴ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {file_duration}
+├😱 ᴄᴀᴘᴛɪᴏɴ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {file_caption}
+└➠ 𝙵𝚊𝚜𝚝 𝚍𝚘𝚠𝚗𝚕𝚘𝚊𝚍 𝚕𝚒𝚗𝚔 : {file_link}
         </div>
         <div style="margin-bottom: 5px; margin-top: 10px">Stream Options :</div>
         <div id="button-container1">
