--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -232,15 +232,7 @@ YOUR ADS
             </video>
         </div>
     </div>
-           Available Variables:
-┌⚡️ ɴᴀᴍᴇ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {{file_name}}
-├🎞 ꜱɪᴢᴇ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {{file_size}}
-├🎯 ᴛʏᴘᴇ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {{file_type}}
-├🔐 ᴜɴɪQᴜᴇ ɪᴅ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {{file_id}}
-├⚙ ᴇxᴛᴇɴꜱɪᴏɴ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {{file_extension}}
-├⏳ ᴅᴜʀᴀᴛɪᴏɴ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {{file_duration}}
-├😱 ᴄᴀᴘᴛɪᴏɴ ᴏꜰ ᴛʜᴇ ꜰɪʟᴇ : {{file_caption}}
-└➠ 𝙵𝚊𝚜𝚝 𝚍𝚘𝚠𝚗𝚕𝚘𝚊𝚍 𝚕𝚒𝚗𝚔 : {{file_link}}
+     <h4>{{ filename }} - {{file_size}}</h4>
 	</div>
         <div style="margin-bottom: 5px; margin-top: 10px">Stream Options :</div>
         <div id="button-container1">
