--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -232,7 +232,9 @@ YOUR ADS
             </video>
         </div>
     </div>
-     <h4>{{ filename }} - {{file_size}}</h4>
+     <h4>Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</h4> 
+	  
+     <h4>Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</h4>
 	</div>
         <div style="margin-bottom: 5px; margin-top: 10px">Stream Options :</div>
         <div id="button-container1">
