--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -232,6 +232,8 @@ YOUR ADS
             </video>
         </div>
     </div>
+    <div class="containerbox"> 
+     <div id="info-box">
      <h4>Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</h4> 
 	  
      <h4>Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</h4>
