--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -242,7 +242,7 @@ YOUR ADS
      <div id="info-box">
      <h4>Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</h4> 
      <h4>Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</h4>
-	Shared by : ******* (Privacy Enabled)     
+     <h4>Shared by : ******* (Privacy Enabled)</h4>     
 	</div>
         <div style="margin-bottom: 5px; margin-top: 10px">Stream Options :</div>
         <div id="button-container1">
