--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -264,10 +264,10 @@ YOUR ADS
             </button>
         </div>
         <div style="margin-bottom: 5px; margin-top: 10px">Download Options :</div>
-        </div>
-	    <div onclick="lazyDownload()" class="col-lg-4 p-2 col-12 rounded-3xl bg-dark text-white text-center align-items-center hover:bg-gradient-to-r from-pink-500 to-violet-500 hover:shadow-md hover:shadow-gray-100 hover:translate-y-[-5px] transition transition-all duration-300 wow animate__animated animate__rubberBand">
-               Download Now
-          </div>
+	    <div id="button-container2">
+            <button id="dl-btn" onclick="lazyDownload()">
+                <i class="fas fa-download"></i> Download Now
+	    </button>
        </div>
 	    <center>
     <h2>
