--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -239,6 +239,7 @@ YOUR ADS
 	    </video>
         </div>
     </div>
+	<p style="font-size: 10px; color:#7b89a3;">If the screen turns white then your browser is not supporting the video, then you can play it using the Application</p>
     <div class="containerbox"> 
      <div id="info-box">
      <h4>Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</h4> 
