--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="https://i.ibb.co/XzCyycV/20230807-211612.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>{{ file_name }} / ARS official</title>
+    <title> {{file_name}} ARS official</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.8/plyr.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <style>
@@ -239,14 +239,14 @@ YOUR ADS
 	    </video>
         </div>
     </div>
-	<p style="font-size: 10px; color:#7b89a3;">If the screen turns white then your browser is not supporting the video, then you can play it using the Application</p>
+	  <p style="font-size: 10px; color:#7b89a3;">If the screen turns white then your browser is not supporting the video, then you can play it using the Application</p>
     <div class="containerbox"> 
      <div id="info-box">
-     <h4>Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</h4> 
+     Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}
 	     
-     <h4>Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</h4>
+     Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}
 	     
-     <h4>Shared by : ******* (Privacy Enabled)</h4>     
+     Shared by : ******* (Privacy Enabled)     
 	</div>
         <div style="margin-bottom: 5px; margin-top: 10px">Stream Options :</div>
         <div id="button-container1">
