--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -242,11 +242,9 @@ YOUR ADS
 	  <p style="font-size: 10px; color:#7b89a3;">If the screen turns white then your browser is not supporting the video, then you can play it using the Application</p>
     <div class="containerbox"> 
      <div id="info-box">
-     Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}
-	     
-     Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}
-	     
-     Shared by : ******* (Privacy Enabled)     
+     <p style="font-size: 13px; color:#7b89a3;">Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</p>
+     <p style="font-size: 13px; color:#7b89a3;">Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</p>
+     <p style="font-size: 13px; color:#7b89a3;">Shares by : ******* (Privacy Enabled)</p>     
 	</div>
         <div style="margin-bottom: 5px; margin-top: 10px">Stream Options :</div>
         <div id="button-container1">
