--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -152,7 +152,7 @@
     }
     
     #info-box {
-        border: 1px solid #01060a;
+        border: 1px solid #140cf0;
         border-radius: 10px;
         padding: 5px;
         width: auto;
@@ -239,12 +239,12 @@ YOUR ADS
 	    </video>
         </div>
     </div>
-	  <p style="font-size: 10px; color:#f20a0a;">If the screen turns white then your browser is not supporting the video, then you can play it using the Application</p>
+	  <p style="font-size: 7px; color:#f20a0a;">If the screen turns white then your browser is not supporting the video, then you can play it using the Application</p>
     <div class="containerbox"> 
      <div id="info-box">
-     <p style="font-size: 8px; color:#0cf77e;">Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</p>
-     <p style="font-size: 8px; color:#0cf77e;">Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</p>
-     <p style="font-size: 8px; color:#0cf77e;">Shares by : ******* (Privacy Enabled)</p>     
+     <p style="font-size: 10px; color:#120e0e;">Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</p>
+     <p style="font-size: 10px; color:#120e0e;">Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</p>
+     <p style="font-size: 10px; color:#120e0e;">Shares by : {{message.from_user.mention}}</p>     
 	</div>
         <div style="margin-bottom: 5px; margin-top: 10px">Stream Options :</div>
         <div id="button-container1">
