--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -244,7 +244,7 @@ YOUR ADS
      <div id="info-box">
      <p style="font-size: 10px; color:#120e0e;">Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</p>
      <p style="font-size: 10px; color:#120e0e;">Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</p>
-     <p style="font-size: 10px; color:#120e0e;">Shares by : {{message.from_user.mention}}</p>     
+     <p style="font-size: 10px; color:#120e0e;">Shares by : Team ARS & i Papcorn Prime Bot</p>     
 	</div>
         <div style="margin-bottom: 5px; margin-top: 10px">Stream Options :</div>
         <div id="button-container1">
