--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -412,7 +412,7 @@ YOUR ADS
       This website only provide service that help you convert your Telegram File to Online Streaming.
       You can report the file/video that contains a problem like copyright, 18+, violence, et. Report <a href="https://telegram.dog/iPapdiscussion" style="color: darkorange"><b>Here</b></a>
       <p style="text-align:center">&copy; ARS official</p>
-        <p style="font-size: 6px; color:#7b89a3:center">ARS official © 2021-2023 - All rights reserved</p>
+        <p style="font-size: 6px; color:#7b89a3;">ARS official © 2021-2023 - All rights reserved</p>
 	<!--
       YOUR ADS 
       -->
