--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -22,7 +22,7 @@
         position: relative;
         height: 55px;
         color: #ffffff;
-        background-color: #2962ff;
+        background-color: #bd77f2;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
         display: flex;
         justify-content: space-between;
@@ -113,7 +113,7 @@
     #button-container2 button#dl-btn,
     #button-container2 button#tgfile-btn,
     #button-container2 button#tg-btn {
-        background-color: #2D76FF; 
+        background-color: #bd77f2; 
         color: #ffffff; 
     }
 
@@ -412,7 +412,6 @@ YOUR ADS
       This website only provide service that help you convert your Telegram File to Online Streaming.
       You can report the file/video that contains a problem like copyright, 18+, violence, et. Report <a href="https://telegram.dog/iPapdiscussion" style="color: darkorange"><b>Here</b></a>
       <p style="text-align:center">&copy; ARS official</p>
-        <p style="font-size: 6px; color:#7b89a3;">ARS official © 2021-2023 - All rights reserved</p>
 	<!--
       YOUR ADS 
       -->
